# algorithms

./: .gitignore  CMakeLists.txt
2d_array/: .cproject  .project  2d_array.cpp  CMakeLists.txt
2d_array/src/: 2d_array.cpp  dfs.cpp  djikstra_algorithm.cpp  rotate.cpp
2d_array/test/: dfs.txt
2d_clustering/: 2d_clustering.cpp  CMakeLists.txt
algorithms/: CMakeLists.txt  package.xml
algorithms/src/: Sorting.cpp
doubly_linked_list/: .cproject  .project  CMakeLists.txt  doubly_linked_list.cpp
dynamic_programming/: CMakeLists.txt
dynamic_programming/src/: minimum_jumps.cpp
greedy_algorithm/: CMakeLists.txt
greedy_algorithm/src/: maximum_overlapping_intervals.cpp  minimum_jumps.cpp  non_overlapping_intervals.cpp
interview_questions/: .cproject  .project  CMakeLists.txt  interview_questions.cpp  key.prv  key.pub  letter.data
linked_list/: .cproject  .project  CMakeLists.txt  linked_list.cpp
machine_learning/: .cproject  .project  CMakeLists.txt  machine_learning.cpp
path_finding/: .cproject  .project  CMakeLists.txt
path_planning/: .cproject  .project  CMakeLists.txt  path_planning.cpp
path_planning/include/: path_planning.h  path_planning_BFS.h  path_planning_DFS.h  path_planning_base.h
path_planning/src/: path_planning.cpp  path_planning_BFS.cpp  path_planning_DFS.cpp  path_planning_base.cpp
path_planning/test/: test_data_1.txt
prefix_sum/: CMakeLists.txt
prefix_sum/src/: prefix_sum  prefix_sum.cpp
sudoku_solver/: .cproject  .project  CMakeLists.txt  sudoku_solver.cpp
tree/: CMakeLists.txt
two_pointers/: CMakeLists.txt
(+5 files in other folders)
